--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -19,4 +19,22 @@
 
 .App-link {
   color: #09d3ac;
+} */
+
+.DetailedView {
+  margin: auto;
+  width: 500px;
+  font-size: calc(10px + 2vmin);
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: block;
+  margin: 30px;
+  padding: 30px;
+  position: relative;
+  width: 300px;
+
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
