--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
 
 .DetailedView {
   margin: auto;
-  width: 500px;
+  /* width: 500px; */
   font-size: calc(10px + 2vmin);
 }
 
@@ -31,6 +31,5 @@
   padding: 30px;
   position: relative;
   width: 300px;
-
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
